--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Betr Beta Android Auth</string>
+    <string name="str_login">Login</string>
+    <string name="str_email">Email</string>
+    <string name="str_password">Password</string>
+    <string name="str_google">Google</string>
+    <string name="str_msg_register">Don\'t have an account?</string>
+    <string name="str_register_here">Register Here</string>
 </resources>
