--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,17 @@
 <resources>
     <string name="app_name">Betr Beta Android Auth</string>
+
     <string name="str_login">Login</string>
     <string name="str_email">Email</string>
     <string name="str_password">Password</string>
     <string name="str_google">Google</string>
-    <string name="str_msg_register">Don\'t have an account?</string>
     <string name="str_register_here">Register Here</string>
     <string name="str_register">Register</string>
     <string name="str_login_here">Login Here</string>
+    <string name="str_sign_out">Sign Out</string>
+
+    <string name="str_msg_register">Don\'t have an account?</string>
     <string name="str_msg_login">Already have an account?</string>
+
+    <string name="str_tmp_greeting">Hello %s</string>
 </resources>
