--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Betr Beta Android Auth</string>
+    <string name="app_google_client_id">579096344936-fkm0fb5mqjvj0mucfvao5ratl6725i6d.apps.googleusercontent.com</string>
 
     <string name="str_login">Login</string>
     <string name="str_email">Email</string>
